z-index bug

--- a/css/newMain.css
+++ b/css/newMain.css
@@ -189,6 +189,7 @@ input:focus {
   display: inline-block;
   grid-column: 5/-1;
   z-index: 3;
+  position: relative;
   background-color: #2f2f2f;
 }
 
